--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Vocal</title>
     <meta name="description" content="This is an example of a meta description.">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <meta name="theme-color" content="#fa4300">
+    <meta name="msapplication-navbutton-color" content="#fa4300">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#fa4300">
     <link crossorigin="anonymous" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
     <link rel="stylesheet" href="./style.css"> 
